# SUPerman

./: .gitignore  AlgorithmRecommender.h  CALCULATE.txt  CMakeLists.txt  DecomposePerman.h  Helpers.h  LICENSE  Makefile  Permanent.h  README.md  Result.h  Settings.h  build.sh  build_superman.py  compiler.cpp  cpu_algos.hpp  experiments.sh  main.cpp  main.cu  mpi_wrapper.cpp  mpi_wrapper.h  precision_test.sh  run_SUPerman.sh  run_superman.sh  scaling.py  superman_slurm.slurm  test.cpp  todos  truba_script.slurm  wrapper.cpp
Algorithms/: AllAlgorithms.h  AllExactAlgorithms.h
Algorithms/CPU/Dense/: dpArbitraryPerman.h  dpNaivePerman.h
Algorithms/CPU/Sparse/: spArbitraryPerman.h  spNaivePerman.h
Algorithms/Complex/: cpuComputeComplex.h  gpuComputeComplex.cu  gpuComputeComplex.cuh
Algorithms/Exact/: AllExactAlgorithms.h
Algorithms/Exact/CPU/Dense/: dpNaivePerman.h
Algorithms/Exact/Complex/: cpuComputeComplex.h
Algorithms/Exact/GPU/: GPUKernelWrappers.cu  PrecisionHelpers.cuh
Algorithms/Exact/GPU/CodeGeneration/: KernelGenMultiGPU.cuh  KernelGenSingleGPU.cuh  generatedKernels.cuh
Algorithms/Exact/GPU/Dense/: dpMultiGPU.cuh
Algorithms/Exact/GPU/Sparse/: spMultiGPU.cuh  spMultiGPUMPI.cuh
Algorithms/GPU/: GPUHelpers.cuh  GPUKernelWrappers.cu  GPUKernelWrappers.h  PrecisionHelpers.cuh  Registers.cuh
Algorithms/GPU/CodeGeneration/: KernelGenMultiGPU.cuh  KernelGenMultiGPUMPI.cuh  KernelGenSingleGPU.cuh  KernelGenerator.cuh  NaiveKernelCodeGen.cuh  UTOrderedKernelCodeGen.cuh  generatedKernels.cuh
Algorithms/GPU/Dense/: DenseKernelDefinitions.cuh  dpMultiGPU.cuh  dpMultiGPUMPI.cuh  dpRyser.cuh  dpSingleGPU.cuh
Algorithms/GPU/Sparse/: ApproximateSparseKernelDefinitions.cuh  SparseKernelDefinitions.cuh  aspSingleGPU.cuh  spMultiGPU.cuh  spMultiGPUMPI.cuh  spSingleGPU.cuh
CommonFiles/: AlgorithmRecommender.h  AlgorithmSelector.h  DecomposePerman.h  Helpers.h  Permanent.h  Result.h  Settings.h
ExactAlgorithms/: AllExactAlgorithms.h
ExactAlgorithms/CPU/: ParallelPermanDense.h  ParallelPermanSparse.h  ParallelSkipPerman.h  ParallelSkipPermanBalanced.h  SequentialPerman.h  spNaivePerman.h
ExactAlgorithms/CPU/Dense/: dpNaivePerman.h
ExactAlgorithms/CPU/Sparse/: spNaivePerman.h
ExactAlgorithms/Complex/: cpuComputeComplex.h  gpuComputeComplex.cu  gpuComputeComplex.cuh
ExactAlgorithms/GPU/: GPUHelpers.cuh  GPUHelpers.h  GPUKernelWrappers.cu  GPUKernelWrappers.h  PrecisionHelpers.cuh  Registers.inc
ExactAlgorithms/GPU/CodeGeneration/: KernelGenMultiGPU.cuh  KernelGenMultiGPUMPI.cuh  KernelGenSingleGPU.cuh  KernelGenerator.cuh  NaiveKernelCodeGen.cuh  UTOrderedKernelCodeGen.cuh  deniz_kernel.cuh  generatedKernels.cuh  kernelGenSingleGPU.cuh
ExactAlgorithms/GPU/Dense/: DenseKernelDefinitions.cuh  PermanGlobal.cuh  PermanLocal.cuh  PermanRegisterCoalescingCGray.cuh  PermanRegisterCoalescingPlainMatrixShared.cuh  PermanRegisterCoalescingPlainMatrixSharedCGray.cuh  PermanRegisterCoalescingPlainMatrixSharedPerwarp.cuh  PermanShared.cuh  PermanSharedCoalescing.cuh  PermanSharedCoalescingPlainMatrix.cuh  PermanSharedCoalescingPlainMatrixShared.cuh  PermanSharedCoalescingPlainMatrixSharedPerwarp.cuh  PermanSharedCoalescingPlainMatrixTexeight.cuh  PermanSharedCoalescingPlainMatrixTexfour.cuh  PermanSharedCoalescingShared.cuh  PermanSharedCoalescingSharedCGray.cuh  PermanSharedCoalescingSharedMultiGPU.cuh  PermanSharedCoalescingSharedMultiGPUCPUChunks.cuh  dpMultiGPU.cuh  dpMultiGPUMPI.cuh  dpSingleGPU.cuh
ExactAlgorithms/GPU/Sparse/: SparseKernelDefinitions.cuh  SparsePermanLocal.cuh  SparsePermanShared.cuh  SparsePermanSharedCoalescing.cuh  SparsePermanSharedCoalescingShared.cuh  SparsePermanSharedCoalescingSharedMultiGPU.cuh  SparsePermanSharedCoalescingSharedMultiGPUCPUChunks.cuh  SparsePermanSharedCoalescingSharedMultiGPUCPUChunksSkipper.cuh  SparsePermanSharedCoalescingSharedSkipper.cuh  spMultiGPU.cuh  spMultiGPUMPI.cuh  spSingleGPU.cuh
ExampleMatrices/: complex.mtx  dense.mtx  sparse.mtx  world_record_60.mtx  world_record_62.mtx
IO/: IO.h  dm.cpp  dm.h
MPIWrappers/: mpi_wrapper.cpp  mpi_wrapper.h
Structures/: Matrix.h  SparseMatrix.h
cmake/: FindGMP.cmake
md/: example_run_superman.md  run_superman.md  supported_algorithms.md  using_superman_with_slurm.md
scripts/: build.sh  build_truba.py  tosun_1_v100.sh  tosun_2_v100.sh  tosun_4_v100.sh  truba_16_a100.sh  truba_16_v100.sh  truba_1_a100.sh  truba_1_v100.sh  truba_2_a100.sh  truba_2_v100.sh  truba_4_a100.sh  truba_4_v100.sh  truba_8_a100.sh  truba_8_v100.sh
